# nonlinear_ct

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  setup.py
artifacts/point_mass/2025-11-27_12-15-37/: critic_jit.pt  model_0.pt  model_1000.pt  policy_io.txt  policy_jit.pt  policy_limits.pt
artifacts/point_mass/2025-11-27_12-15-37/exported/stability/: stability_info.txt  stability_samples.pt
config/: extension.toml
docs/: main.tex  proposal.tex  references.bib
homework/: hw1.ipynb
homework/utils/: __init__.py  phase_portrait.py
nonlinear_ct/: __init__.py
nonlinear_ct/assets/: __init__.py  point_mass.py  point_mass.urdf
nonlinear_ct/mdp/: __init__.py  events.py  observations.py  rewards.py
nonlinear_ct/tasks/: __init__.py  point_mass_cfg.py  ppo_cfg.py
scripts/: analyze.ipynb  cli_args.py  exporter.py  play.py  sample.py  stability.ipynb  stability_v0.ipynb  train.py  utils.py
