[project]
name = "nonlinear-ct"
version = "0.1.0"
description = "materials for nonlinear control theory (fall 2025)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.15",
]
